[gd_scene load_steps=2 format=3 uid="uid://c0ouxo6t156h5"]

[ext_resource type="Script" path="res://Scenes/Panels/Panel T1/TestPanel.gd" id="1_7uoif"]

[node name="Test Panel" type="Control"]
layout_mode = 3
anchor_right = 0.444
anchor_bottom = 0.79
offset_right = 0.511963
offset_bottom = 0.0799866
script = ExtResource("1_7uoif")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 512.0

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -224.0
offset_right = 91.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32
columns = 2

[node name="Button" type="Button" parent="ColorRect/GridContainer"]
custom_minimum_size = Vector2(14.86, 128)
layout_mode = 2
text = "Button 1"

[node name="Button2" type="Button" parent="ColorRect/GridContainer"]
custom_minimum_size = Vector2(14.86, 128)
layout_mode = 2
text = "Button 2"

[node name="Button3" type="Button" parent="ColorRect/GridContainer"]
custom_minimum_size = Vector2(14.86, 128)
layout_mode = 2
text = "Button 3"

[node name="Button4" type="Button" parent="ColorRect/GridContainer"]
custom_minimum_size = Vector2(14.86, 128)
layout_mode = 2
text = "Button 4"

[node name="Button5" type="Button" parent="ColorRect/GridContainer"]
custom_minimum_size = Vector2(14.86, 128)
layout_mode = 2
text = "Button 5"

[node name="Button6" type="Button" parent="ColorRect/GridContainer"]
custom_minimum_size = Vector2(14.86, 128)
layout_mode = 2
text = "Button 6"

[connection signal="button_down" from="ColorRect/GridContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="ColorRect/GridContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="ColorRect/GridContainer/Button3" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="ColorRect/GridContainer/Button4" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="ColorRect/GridContainer/Button5" to="." method="_on_button_5_button_down"]
[connection signal="button_down" from="ColorRect/GridContainer/Button6" to="." method="_on_button_6_button_down"]
