extends Control


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_button_button_down() -> void:
	print_debug("Button 1!")


func _on_button_2_button_down() -> void:
	print_debug("Button 2!")


func _on_button_3_button_down() -> void:
	print_debug("Button 3!")


func _on_button_4_button_down() -> void:
	print_debug("Button 4!")


func _on_button_5_button_down() -> void:
	print_debug("Button 5!")


func _on_button_6_button_down() -> void:
	print_debug("Button 6!")


func _on_button_7_button_down() -> void:
	print_debug("Button 7!")


func _on_button_8_button_down() -> void:
	print_debug("Button 8!")


func _on_button_9_button_down() -> void:
	print_debug("Button 9!")
